# CoFriends-BE-Python

./: .env.example  .gitignore  API_DESIGN_ANALYSIS.md  API_DESIGN_CONVERSATIONAL.md  AWS_SECRETS_SETUP.md  Dockerfile  HYBRID_AI_ARCHITECTURE.md  Jenkinsfile  LOCAL_SETUP.md  PROJECT_COMPLETE.md  README.md  README_KR.md  REALTIME_IMPLEMENTATION_GUIDE.md  SSE_IMPLEMENTATION_GUIDE.md  alembic.ini  alternative_implicit.py  create_tables.sql  docker-compose.override.yml  docker-compose.yml  env.example  install_with_conda.bat  main.py  pyproject.toml  requirements.txt  run.py  start_local.bat  start_local.py  start_local_dev.bat  start_local_dev.py  start_uv_dev.py  start_with_docker.bat  test_bedrock_direct.py  test_bedrock_mock.py  test_collaborative_filtering.py  test_conversational.py  test_date_menu_recommendation.py  test_db_recommendation.py  test_endpoints.py  test_hybrid_recommendation.py  test_local.py  (+3 more)
alembic/: env.py
alembic/versions/: 001_initial_migration_with_vote_month.py  a76686759a06_initial_migration.py  b3398fc301b1_add_restaurant_suggestions_tables.py
app/: __init__.py
app/api/: __init__.py  ai_chat.py  ai_insights.py  chat.py  chat_history.py  conversational.py  date_menu_recommendation.py  hybrid_chat.py  hybrid_recommendation.py  menu.py  personalized_recommendation.py  place.py  realtime.py  restaurant_suggestions.py  scheduler.py  slack.py  sse.py  websocket.py
app/core/: __init__.py  config.py  constants.py  database.py  secrets_manager.py  websocket.py
app/models/: __init__.py  mongodb.py  postgres.py
app/schemas/: __init__.py  ai.py  personalized_recommendation.py
app/services/: __init__.py  ai_response_service.py  bedrock_service.py  chat_history_service.py  chat_service.py  collaborative_filtering_service.py  conversational_service.py  date_menu_recommendation_service.py  hybrid_pipeline_service.py  hybrid_recommendation_service.py  lightrag_service.py  menu_service.py  place_service.py  realtime_recommendation_service.py  restaurant_suggestion_service.py  scheduler_service.py  slack_service.py  sse_manager.py  (+4 more)
(+3 files in other folders)
