[project]
name = "cofriends-fastapi"
version = "0.1.0"
description = "Co-Friends FastAPI Backend Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.10.1",
    "motor>=3.3.2",
    "redis>=5.2.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.18",
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "chromadb>=1.2.1",
    "sentence-transformers>=5.1.1",
    "neo4j>=6.0.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.2",
    "implicit>=0.7.2",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.35",
    "langchain-community>=0.3.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

